--- a/develop/index.html
+++ b/develop/index.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-	jfghjfgjfghjfg
-	
+
+<script src="scripts/app.js"></script>
 </body>
 </html>
