--- a/develop/index.html
+++ b/develop/index.html
@@ -2,12 +2,47 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Shop</title>
 
 	<link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+<header class="topbar">
+	<h1 class="logo">
+		<b>shop</b>
+		<i>slogan</i>
+	</h1>
 
+	<nav class="menu">
+		<ul>
+			<li><a href="#" title="Roupas e Moda">Roupas e Moda</a></li>
+			<li><a href="#" title="Calçados">Calçados</a></li>
+			<li><a href="#" title="Jóias e Relógios">Jóias e Relógios</a></li>
+			<li><a href="#" title="Bolsas e Viagem">Bolsas e Viagem</a></li>
+			<li><a href="#" title="Saúde e Beleza">Saúde e Beleza</a></li>
+			<li><a href="#" title="Esportes">Esportes</a></li>
+			<li><a href="#" title="Eletro">Eletro</a></li>
+			<li><a href="#" title="Casa">Casa</a></li>
+			<li><a href="#" title="Livros">Livros</a></li>
+			<li><a href="#" title="Outros">Outros</a></li>
+		</ul>
+	</nav>
+
+	<div class="daily-offer">
+		<strong>Oferta do dia</strong>
+	</div>
+</header>
+<div class="slider"></div>
+<div class="search">
+	<form>
+		<input type="text" class="input-search">
+		<button class="btn-search">Pesquisar</button>
+		<button class="btn-category">Categoria</button>
+	</form>
+</div>
+<main>
+	<div class="offers"></div>
+</main>
 <script src="scripts/app.js"></script>
 </body>
 </html>
