--- a/develop/index.html
+++ b/develop/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Shop</title>
 
+	<link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
 	<link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
