--- a/develop/index.html
+++ b/develop/index.html
@@ -10,22 +10,22 @@
 <body>
 <header class="topbar">
 	<h1 class="logo">
-		<a class="logo-name" href="#"><b>shop</b></a>
+		<a class="logo-name" href="#" title="Shop"><b>shop</b></a>
 		<span>slogan</span>
 	</h1>
 
 	<nav class="navbar">
 		<ul class="main-menu">
-			<li class="item"><a href="#" title="Roupas e Moda">Roupas e Moda</a></li>
-			<li class="item"><a href="#" title="Calçados">Calçados</a></li>
-			<li class="item"><a href="#" title="Jóias e Relógios">Jóias e Relógios</a></li>
-			<li class="item"><a href="#" title="Bolsas e Viagem">Bolsas e Viagem</a></li>
-			<li class="item"><a href="#" title="Saúde e Beleza">Saúde e Beleza</a></li>
-			<li class="item"><a href="#" title="Esportes">Esportes</a></li>
-			<li class="item"><a href="#" title="Eletro">Eletro</a></li>
-			<li class="item"><a href="#" title="Casa">Casa</a></li>
-			<li class="item"><a href="#" title="Livros">Livros</a></li>
-			<li class="item"><a href="#" title="Outros">Outros</a></li>
+			<li class="item"><a href="#" class="nav" title="Roupas e Moda">Roupas e Moda</a></li>
+			<li class="item"><a href="#" class="nav" title="Calçados">Calçados</a></li>
+			<li class="item"><a href="#" class="nav" title="Jóias e Relógios">Jóias e Relógios</a></li>
+			<li class="item"><a href="#" class="nav" title="Bolsas e Viagem">Bolsas e Viagem</a></li>
+			<li class="item"><a href="#" class="nav" title="Saúde e Beleza">Saúde e Beleza</a></li>
+			<li class="item"><a href="#" class="nav" title="Esportes">Esportes</a></li>
+			<li class="item"><a href="#" class="nav" title="Eletro">Eletro</a></li>
+			<li class="item"><a href="#" class="nav" title="Casa">Casa</a></li>
+			<li class="item"><a href="#" class="nav" title="Livros">Livros</a></li>
+			<li class="item"><a href="#" class="nav" title="Outros">Outros</a></li>
 		</ul>
 	</nav>
 
