google web font

--- a/develop/index.html
+++ b/develop/index.html
@@ -4,14 +4,15 @@
 	<meta charset="UTF-8">
 	<title>Shop</title>
 
+	<link href='http://fonts.googleapis.com/css?family=Dosis:200,300,400,500,600,700,800' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
 	<link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
 <header class="topbar">
 	<h1 class="logo">
-		<a class="logo-name" href="#" title="Shop"><b>shop</b></a>
-		<span>slogan</span>
+		<a class="logo-name" href="#" title="Shop"><b>Comparando</b></a>
+		<span class="logo-slogan">os preços das principais lojas na web.</span>
 	</h1>
 
 	<nav class="navbar">
