--- a/develop/index.html
+++ b/develop/index.html
@@ -5,7 +5,7 @@
 	<title>Shop</title>
 
 
-	<link href='http://fonts.googleapis.com/css?family=Dosis:200,300,400,500,600,700,800' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,300,700,800,400,600' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
 	<link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
@@ -22,31 +22,32 @@
 		<a href="#"><strong>Oferta do dia</strong></a>
 	</div>
 
-	<form class="search">
-		<input type="text" class="input-search">
-		<button class="btn-search"><i class="fa fa-search"></i></button>
-		<!--button class="btn-category">Categoria</button-->
-	</form>
-
-	<!--nav class="navbar">
+	<nav class="navbar">
 		<ul class="main-menu">
-			<li class="item"><a href="#" class="nav" title="Roupas e Moda">Roupas e Moda</a></li>
-			<li class="item"><a href="#" class="nav" title="Calçados">Calçados</a></li>
-			<li class="item"><a href="#" class="nav" title="Jóias e Relógios">Jóias e Relógios</a></li>
-			<li class="item"><a href="#" class="nav" title="Bolsas e Viagem">Bolsas e Viagem</a></li>
-			<li class="item"><a href="#" class="nav" title="Saúde e Beleza">Saúde e Beleza</a></li>
-			<li class="item"><a href="#" class="nav" title="Esportes">Esportes</a></li>
-			<li class="item"><a href="#" class="nav" title="Eletro">Eletro</a></li>
-			<li class="item"><a href="#" class="nav" title="Casa">Casa</a></li>
-			<li class="item"><a href="#" class="nav" title="Livros">Livros</a></li>
-			<li class="item"><a href="#" class="nav" title="Outros">Outros</a></li>
+			<li class="item ico-roupas-e-moda"><a href="#" class="nav" title="Roupas e Moda"><b>Roupas e moda</b></a></li>
+			<li class="item ico-calcados"><a href="#" class="nav" title="Calçados"><b>Calçados</b></a></li>
+			<li class="item ico-joias-e-relogios"><a href="#" class="nav" title="Jóias e Relógios"><b>Jóias e Relógios</b></a></li>
+			<li class="item ico-bolsas-e-viagem"><a href="#" class="nav" title="Bolsas e Viagem"><b>Bolsas e Viagem</b></a></li>
+			<li class="item ico-saude-e-beleza"><a href="#" class="nav" title="Saúde e Beleza"><b>Saúde e Beleza</b></a></li>
+			<li class="item ico-esportes"><a href="#" class="nav" title="Esportes"><b>Esportes</b></a></li>
+			<li class="item ico-eletro"><a href="#" class="nav" title="Eletro"><b>Eletro</b></a></li>
+			<li class="item ico-casa"><a href="#" class="nav" title="Casa"><b>Casa</b></a></li>
+			<li class="item ico-livros"><a href="#" class="nav" title="Livros"><b>Livros</b></a></li>
+			<li class="item ico-outros"><a href="#" class="nav" title="Outros"><b>Outros</b></a></li>
 		</ul>
-	</nav-->
+	</nav>
 </header>
 <div class="slider"></div>
 <main>
 	<div class="offers"></div>
 </main>
+
+<!--form class="search">
+		<input type="text" class="input-search">
+		<button class="btn-search"><i class="fa fa-search"></i></button>
+		<button class="btn-category">Categoria</button>
+	</form-->
+
 <script src="scripts/app.js"></script>
 </body>
 </html>
